   the engine now truncates instead of rounding. This is consistent with the
   ECMAScript specification's way of converting doubles to ints.

****************************************************************************
*                          Library                                         *
****************************************************************************

QtQml
------

QtQuick
------

- New scene graph renderer should reduce state changes, number of draw calls,
  CPU->GPU bandwidth and generally improve performance.

- Textures in the scene graph can now be entered into an atlas, facilitating
  in better batching in the renderer. Atlas textures are enabled by passing
  QQuickWindow::TextureCanUseAtlas to QQuickWindow::createTextureFromImage()

****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Tools                                           *
****************************************************************************


****************************************************************************
*                          Plugins                                         *
****************************************************************************
